; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_ccmd.c_zfiWlanScan.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_ccmd.c_zfiWlanScan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, %struct.TYPE_4__, %struct.TYPE_5__, i32 }
%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_5__ = type { i64 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@wd = common dso_local global %struct.TYPE_6__* null, align 8
@ZM_MODE_AP = common dso_local global i64 0, align 8
@ZM_BSSID_LIST_SCAN = common dso_local global i32 0, align 4
@ZM_LED_CTRL_FLAG_ALPHA = common dso_local global i32 0, align 4
@ZM_SCAN_MGR_SCAN_EXTERNAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"ret = \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zfiWlanScan(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @zmw_get_wlan_dev(i32* %5)
  %7 = call i32 @zm_debug_msg0(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 (...) @zmw_declare_for_critical_section()
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @zmw_enter_critical_section(i32* %9)
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** @wd, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @ZM_MODE_AP, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %25

16:                                               ; preds = %1
  %17 = load i32, i32* @ZM_BSSID_LIST_SCAN, align 4
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** @wd, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 8
  %21 = or i32 %20, %17
  store i32 %21, i32* %19, align 8
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** @wd, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 2
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  store i64 0, i64* %24, align 8
  store i32 0, i32* %4, align 4
  br label %26

25:                                               ; preds = %1
  br label %30

26:                                               ; preds = %16
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @zmw_leave_critical_section(i32* %27)
  %29 = load i32, i32* %4, align 4
  store i32 %29, i32* %2, align 4
  br label %54

30:                                               ; preds = %25
  %31 = load i32*, i32** %3, align 8
  %32 = call i32 @zmw_leave_critical_section(i32* %31)
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** @wd, align 8
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %33, i32 0, i32 1
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = load i32, i32* @ZM_LED_CTRL_FLAG_ALPHA, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %47

40:                                               ; preds = %30
  %41 = load i32, i32* @ZM_LED_CTRL_FLAG_ALPHA, align 4
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** @wd, align 8
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 1
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = or i32 %45, %41
  store i32 %46, i32* %44, align 4
  br label %47

47:                                               ; preds = %40, %30
  %48 = load i32*, i32** %3, align 8
  %49 = load i32, i32* @ZM_SCAN_MGR_SCAN_EXTERNAL, align 4
  %50 = call i32 @zfScanMgrScanStart(i32* %48, i32 %49)
  store i32 %50, i32* %4, align 4
  %51 = load i32, i32* %4, align 4
  %52 = call i32 @zm_debug_msg1(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 %51)
  %53 = load i32, i32* %4, align 4
  store i32 %53, i32* %2, align 4
  br label %54

54:                                               ; preds = %47, %26
  %55 = load i32, i32* %2, align 4
  ret i32 %55
}

declare dso_local i32 @zmw_get_wlan_dev(i32*) #1

declare dso_local i32 @zm_debug_msg0(i8*) #1

declare dso_local i32 @zmw_declare_for_critical_section(...) #1

declare dso_local i32 @zmw_enter_critical_section(i32*) #1

declare dso_local i32 @zmw_leave_critical_section(i32*) #1

declare dso_local i32 @zfScanMgrScanStart(i32*, i32) #1

declare dso_local i32 @zm_debug_msg1(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
